Fixed input validation, +auto dark mode support.

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
   text-align: center;
   background-color: white;
   color: black;
-  transition: 0.2s;
 }
 
 .gn {
